--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+			<attribute name="add-reads" value="java.base=java.desktop"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path="Chapter03/src"/>
 	<classpathentry kind="src" path="Chapter04/src"/>
 	<classpathentry kind="src" path="Chapter05/src"/>
