--- a/.classpath
+++ b/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
-			<attribute name="add-reads" value="java.base=java.desktop"/>
+			<attribute name="add-reads" value="java.base=java.desktop:java.base=java.desktop"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="Chapter03/src"/>
